--- a/data-jpa/src/main/resources/application.yml
+++ b/data-jpa/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
         #dialect: org.hibernate.dialect.Oracle10gDialect
         #show_sql: true
         format_sql: true
+  data:
+    web:
+      pageable:
+        default-page-size: 10 # default page size를 지정
+        max-page-size: 2000
+        one-indexed-parameters: true # 1부터 페이징이 시작하도록 함 but, pageable 객체에 있는 데이터가 맞지 않는다. 한계가 있음
 
 logging.level:
   org.hibernate.SQL: debug
