changed from springboot 2.5.5 to springboot 2.2.2 for setting version

--- a/QueryDslStudy/build.gradle
+++ b/QueryDslStudy/build.gradle
@@ -1,12 +1,10 @@
 plugins {
-	id 'org.springframework.boot' version '2.5.4'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	//query dsl 추가
+	id 'org.springframework.boot' version '2.2.2.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.8.RELEASE' //querydsl 추가
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
 }
-
-group = 'com.example'
+group = 'study'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -19,22 +17,25 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//query dsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 test {
 	useJUnitPlatform()
 }
-//query dsl 추가
+
 def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
 	jpa = true
@@ -45,7 +46,6 @@ sourceSets {
 }
 configurations {
 	querydsl.extendsFrom compileClasspath
-
 }
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
